# MyCppProject

./: .gitignore  CMakeLists.txt  README.md  bmp2brotli.cpp  bmp2lzma.cpp  file2bmp.cpp  int2bmp.cpp  output.br  outputdynamic.br  outputdynamic.rar
src/: cplex_code.cpp  glpk_minimize.cpp  glpk_minimize_edited.cpp  glpk_test.cpp  lagrange_mod.cpp  main.cpp  triangular_num.cpp
